# mission-control

./: Cargo.toml  README.md  mctl.toml
crates/mock_telemetry/: Cargo.toml
crates/mock_telemetry/src/: main.rs
src/: config.rs  gui.rs  main.rs  recorder.rs  serial.rs  telemetry.rs
src/gui/: color.rs  graph.rs
