[package]
name = "mission-control"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
bus = "2.4.0"
clap = { version = "4.2.4", features = ["derive"] }
csv = "1.2.1"
eframe = { version = "0.21.3", features = ["dark-light"] }
egui = "0.21.0"
futures = "0.3.28"
fxhash = "0.2.1"
postcard = { version = "1.0.4", features = ["use-std"] }
serde = "1.0.160"
serial-core = "0.4.0"
serial-unix = "0.4.0"
time = { version = "0.3.20", features = ["local-offset", "formatting", "macros"] }
tokio = { version = "1.28.0", features = ["full"] }
toml = "0.7.3"
