[package]
name = "mission-control"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sulami/mission-control"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
csv = "1.2.1"
eframe = { version = "0.21.3", features = ["dark-light"] }
egui = "0.21.0"
embedded-imu = { path = "/Users/sulami/src/embedded-imu", features = [ "std" ] }
fxhash = "0.2.1"
postcard = { version = "1.0.4", features = ["use-std"] }
serde = "1.0.160"
time = { version = "0.3.20", features = ["local-offset", "formatting", "macros"] }
tokio = { version = "1.28.0", features = ["full"] }
tokio-serial = "5.4.4"
toml = "0.7.3"
