[package]
name = "mock_telemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
embedded-imu = { path = "/Users/sulami/src/embedded-imu", features = [ "std" ] }
random = "0.14.0"
serial-core = "0.4.0"
serial-unix = "0.4.0"
